--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@ Thanks :)*/
             <a href="#"><div class="container mt-4">
                 <div class="row">
                     <div class="col">
-                        <div class="card main text-light fw-bold" style="width: 18rem;">
-                            <img src="assets/img/profile.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
+                        <div class="card main text-light bg-info fw-bold" style="width: 18rem;">
+                            <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
                             <div class="card-body">
                                 <span class="card-title">Francisca</span>
                                 <p class="card-text">Year</p>
@@ -231,7 +231,7 @@ Thanks :)*/
                   <div class="row">
                     <div class="col">
                         <div class="card married bg-primary text-light" style="width: 5rem;">
-                            <img src="assets/img/profile.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
+                            <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
                             <div class="card-body ">
                                 <span class="card-title">Merlinda</span>
                                 <p class="card-text">Year</p>
@@ -322,7 +322,7 @@ Thanks :)*/
                     <div class="row">
                         <div class="col">
                             <div class="card naminyo bg-success text-light" style="width: 5rem;">
-                                <img src="assets/img/profile.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
+                                <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
                                 <div class="card-body">
                                     <span class="card-title">Erlinda</span>
                                     <p class="card-text">Year</p>
@@ -350,7 +350,7 @@ Thanks :)*/
                     </div>
                     <div class="col">
                         <div class="card naminyo bg-success text-light" style="width: 5rem;">
-                            <img src="assets/img/profile.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
+                            <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
                             <div class="card-body">
                                 <span class="card-title">Teresita</span>
                                 <p class="card-text">Year</p>
@@ -475,7 +475,7 @@ Thanks :)*/
                   <div class="row">
                     <div class="col">
                         <div class="card married bg-primary text-light" style="width: 5rem;">
-                            <img src="assets/img/profile.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
+                            <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
                             <div class="card-body">
                                 <span class="card-title">Julieta</span>
                                 <p class="card-text">Year</p>
@@ -526,7 +526,7 @@ Thanks :)*/
                         </div>
                         <div class="col">
                             <div class="card naminyo bg-success text-light" style="width: 5rem;">
-                                <img src="assets/img/profile.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
+                                <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
                                 <div class="card-body">
                                     <span class="card-title">Elina</span>
                                     <p class="card-text">Year</p>
@@ -581,7 +581,7 @@ Thanks :)*/
                         </div>
                         <div class="col">
                             <div class="card naminyo bg-success text-light" style="width: 5rem;">
-                                <img src="assets/img/profile.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
+                                <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
                                 <div class="card-body">
                                     <span class="card-title">Lucia</span>
                                     <p class="card-text">Year</p>
@@ -610,7 +610,7 @@ Thanks :)*/
                   <div class="row">
                     <div class="col">
                         <div class="card married bg-primary text-light" style="width: 5rem;">
-                            <img src="assets/img/profile.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
+                            <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
                             <div class="card-body">
                                 <span class="card-title">Merlinda</span>
                                 <p class="card-text">Year</p>
@@ -667,7 +667,7 @@ Thanks :)*/
                     <div class="row">
                         <div class="col">
                             <div class="card married bg-primary text-light" style="width: 5rem;">
-                                <img src="assets/img/profile.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
+                                <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
                                 <div class="card-body">
                                     <span class="card-title">Biatriz</span>
                                     <p class="card-text">Year</p>
@@ -697,7 +697,7 @@ Thanks :)*/
                     <div class="row">
                         <div class="col">
                             <div class="card married bg-primary text-light" style="width: 5rem;">
-                                <img src="assets/img/profile.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
+                                <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
                                 <div class="card-body">
                                     <span class="card-title">Bebeng</span>
                                     <p class="card-text">Year</p>
@@ -757,7 +757,7 @@ Thanks :)*/
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script >
+    <!-- <script >
       window.onload = function() {
         var password = prompt("Enter the password:");
       
@@ -771,7 +771,7 @@ Thanks :)*/
           window.location.href = 'https://google.com'; 
         }
       }
-      </script>
+      </script> -->
     <script>
       // Select all buttons with the common class "my-btn"
       const buttons = document.querySelectorAll(".my-btn");
