--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>Family Tree</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/tree.ico">
   </head>
   <style>
     /*Now the CSS*/
@@ -178,12 +179,16 @@ right connector from last child*/
 Thanks :)*/
 
 .main{
-  background-color: rgb(246, 77, 77);
+  background-color: rgb(149, 20, 121);
+
+  
 }
 
 
   </style>
   <body>
+
+  
     <div class="container py-5 d-flex justify-content-center" >
       <div class="row">
         <div class="d-flex gap-1 justify-content-between">
@@ -203,7 +208,7 @@ Thanks :)*/
             <a href="#"><div class="container mt-4">
                 <div class="row">
                     <div class="col">
-                        <div class="card main text-light bg-info fw-bold" style="width: 18rem;">
+                        <div class="card main text-light  fw-bold" style="width: 18rem;">
                             <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
                             <div class="card-body">
                                 <span class="card-title">Francisca</span>
