--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ right connector from last child*/
     /*Thats all. I hope you enjoyed it.
 Thanks :)*/
 
-.main{
+.main, .root{
   background-color: rgb(149, 20, 121);
 
   
@@ -192,8 +192,9 @@ Thanks :)*/
     <div class="container py-5 d-flex justify-content-center" >
       <div class="row">
         <div class="d-flex gap-1 justify-content-between">
-          <span class="bg-primary px-lg-5 rounded fw-bold">Married to</span>
-          <span class="bg-success px-lg-5 rounded fw-bold">Children</span>
+          <span class="root px-lg-5 text-light rounded fw-bold">Root</span>
+          <span class="bg-primary px-lg-5  text-light rounded fw-bold">Married to</span>
+          <span class="bg-success px-lg-5 text-light rounded fw-bold">Children</span>
           <span class="bg-warning px-lg-5 rounded fw-bold">Apo - <span class="text-light">Married to</span> </span>
           <span class="bg-info px-lg-5 rounded fw-bold">Apo sa tuhod</span>
           <span class="bg-secondary px-lg-5 rounded fw-bold text-light">Apo sa Kumagko</span>
@@ -202,11 +203,12 @@ Thanks :)*/
     </div>
     <div class="mycontainer" id="content" >
   
-      <div class="tree" >
+      <div class="tree fw-bold" >
         <ul>
           <li>
             <a href="#"><div class="container mt-4">
                 <div class="row">
+                  
                     <div class="col">
                         <div class="card main text-light  fw-bold" style="width: 18rem;">
                             <img src="assets/img/profile1.png" class="card-img-top  mx-auto img-fluid py-2" alt="Image Alt Text">
