--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@ Thanks :)*/
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <!-- <script >
+    <script >
       window.onload = function() {
         var password = prompt("Enter the password:");
       
@@ -779,7 +779,7 @@ Thanks :)*/
           window.location.href = 'https://google.com'; 
         }
       }
-      </script> -->
+      </script>
     <script>
       // Select all buttons with the common class "my-btn"
       const buttons = document.querySelectorAll(".my-btn");
